--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,15 +1,56 @@
 .navbar-principal-classes {
     background-color: #CDC7ED;
 }
-
-.navb-container{
-    margin-left: 11px;
-    margin-right: 11px;
-}
-
 .nav-logo{
     width: 145px;
     height: 61px;
     background-size: cover;
     margin-top: 12px;
+    margin-left: 22px;
 }
+.nav-text{
+    color: #3E2F9C;
+    font-family: "Jost", serif;
+    font-size: 16px;
+}
+.nav_links{
+    margin-right: 29px;
+}
+.nav-link:hover{
+    color: #6445AC;
+}
+.nav-btn-container{
+    background-color: #3E2F9C;
+    padding: 18px 0 0 25px;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+
+}
+
+.custom-btn {
+    border: 1px solid #fff;
+    color: #fff;
+    background: #4d3b99;
+    font-size: 15px;
+    width: 100px;
+    height: 36px;
+  }
+
+  .special_margin{
+    margin-right: 31px;
+  }
+  
+  .custom-btn:hover {
+    border: 1px solid #ffff;
+    color: #fff;
+  }
+  .responsive-navbar{
+    display: none;
+  }
+
+  @media (width <= 915px) {
+    .responsive-navbar{
+        display: block;
+    }
+  }
