--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -1,30 +1,42 @@
 .navbar-principal-classes {
     background-color: #CDC7ED;
 }
+
+.nav-container-items{
+  display: flex;
+  width: 100%;
+  position: relative;
+}
+
+.nav-content-img{
+  margin-left: 22px;
+}
 .nav-logo{
-    width: 145px;
-    height: 61px;
-    background-size: cover;
-    margin-top: 12px;
-    margin-left: 22px;
+  width: 145px;
+  height: 61px;
+  background-size: cover;
+  margin-top: 13px;
+  
 }
 .nav-text{
-    color: #3E2F9C;
-    font-family: "Jost", serif;
-    font-size: 16px;
+  color: #3E2F9C;
+  font-family: "Jost", serif;
+  font-size: 16px;
 }
 .nav_links{
-    margin-right: 29px;
+  margin-right: 29px;
+  margin-left: auto ;
 }
 .nav-link:hover{
-    color: #6445AC;
+  color: #6445AC;
 }
 .nav-btn-container{
-    background-color: #3E2F9C;
-    padding: 18px 0 0 25px;
-    margin-left: auto;
-    display: flex;
-    justify-content: center;
+  background-color: #3E2F9C;
+  padding: 18px 0 0 25px;
+  display: flex;
+  justify-content: center;
+  height: 73px;
+
 
 }
 
@@ -45,12 +57,107 @@
     border: 1px solid #ffff;
     color: #fff;
   }
-  .responsive-navbar{
+
+  .nav-btn-container-responsive{
+    display: none;
+  }
+  .nav-toggle{
     display: none;
   }
 
   @media (width <= 915px) {
-    .responsive-navbar{
-        display: block;
+    .nav-toggle{
+        display: flex;
+        border: 1px solid #3E2F9C;
+        border-radius: 5px;
+        width: 35px;
+        height: 35px;
+        flex-direction: column;
+        justify-content: center;
+        margin-right: 20px;
+        margin-top: 15px;
+        align-items: center;
     }
+
+    .nav-container-items{
+      display: flex;
+      flex-direction: column;
+      height: 210px;
+      width: 100%;
+      transform: translateY(-170%);
+      transition: 0.3s ease all;
+      position: absolute;
+    }
+    .nav-container-items.open{
+      transform: translateY(0);
+    }
+    .nav-content-img{
+      display: flex;
+      margin-left: 10px;
+      margin-right: auto;
+    }
+    .nav-logo{
+      width: auto;
+      margin-left: 0px;
+    }
+    .nav_links{
+        position: absolute;
+        top: 72px;
+        display: flex;
+        flex-direction: column;
+        margin-right: auto;
+        background: #CDC7ED;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav-text-content{
+      margin-right: 0 !important;
+    }
+    .nav-btn-container{
+      display: none;
+    }
+    .nav-toggle span{
+  
+          background-color: #3E2F9C;
+          width: 20px;
+          height: 2px;
+          margin-bottom: 5px;
+          transform-origin: 5px 0px;
+          transition: all 0.2s linear;
+          display: flex;
+          align-items: center;
+         
+    }
+    .bar-special-style{
+        margin-bottom: 0px !important;
+    }
+    
+    .nav-toggle.open > span {
+      transform: rotate(47deg) translate(1px, 0);
+    }
+    .nav-toggle.open > span:nth-child(2) {
+      display: none;
+    }
+    .nav-toggle.open > span:nth-child(3) {
+      transform: rotate(-48deg) translate(-2px, 0px);
+    }
+
+    .nav-btn-container-responsive{
+      display: flex;
+      justify-content: center;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      padding: 15px;
+    }
+    .custom-btn{
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    .special_margin{
+      margin-right: 0px;
+    }
+
+     
   }
