--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -1,6 +1,16 @@
+.profile-container{
+    background-color: rgba(205, 199, 237, 0.14);
+    padding: 15px;
+    
+}
 .content-data-profile{
-    width: 400px;
-    background-color: aquamarine;
-    height: 400px;
-    border-radius: 8px;
+    width: 550px;
+    background-color: rgba(111, 76, 176, 0.45);
+    height: 350px;
+    border-radius: 21px;
+    padding: 30px 19px 25px 19px;
+    display: flex;
+}
+.container-info-profile{
+    font-family: "Gantari", serif;
 }
