--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -1,18 +1,24 @@
 
+body {
+    height: 100vh; /* Altura completa de la ventana */
+    overflow-y: auto; /* Habilita el scroll vertical */
+}
 .profile-body{
-    background-color: rgba(205, 199, 237, 0.25);;
+    background-color: rgba(205, 199, 237, 0.25);
+    
 }
 .prof-pinci-title{
     font-family: "Alata", serif;
     color: #3E2F9C;
     font-size: 34px;
+    margin-top: 20px;
 }
 .profile-container{
     padding: 15px;
     
 }
 .content-data-profile{
-    width: 550px;
+    width: 80%;
     background-color: rgba(111, 76, 176, 0.45);
     height: 350px;
     border-radius: 21px;
@@ -41,41 +47,70 @@
 }
 .dot-states{
     display: flex;
+    gap: 10px;
+    align-items: center;
+    position: relative;
     flex-direction: column;
 }
-.dot-states > img{
-    width: 25px;
-    height: 25px;
-    background-size: cover;
-    margin-bottom: 5px;
+.dot-states .btn-light{
+    background-color: transparent;
+    border: transparent;
+}
+.dot-states .btn-light:hover{
+    background-color: transparent;
+    border: transparent;
+}
+.beautifier {
+    background-color: #2f4fff;
+    box-shadow: 0px 0px 4px black;
+    opacity: 1 !important;
+}
+.tooltip.bs-tooltip-right.tooltip-arrow::before {
+    border-right-color: #2f4fff !important;
+}
+.tooltip.bs-tooltip-left.tooltip-arrow::before {
+    border-left-color: #2f4fff !important;
+}
+.tooltip.bs-tooltip-bottom.tooltip-arrow::before {
+    border-bottom-color: #2f4fff !important;
+}
+.tooltip.bs-tooltip-top.tooltip-arrow::before {
+    border-top-color: #2f4fff !important;
 }
 
+.dot-states img {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+
+
 .choose-speci-box{
-    width: 100%;
-    height: 100%;
+    width: 495px;
+    height: 200px;
     background-color: rgba(111, 76, 176, 0.25);
     border-radius: 57px;
-    margin-right: auto;
+    margin-right: 20px;
     padding: 10px 0 0 25px; 
 }
 
 .select-speciality{
-    font-size: 26px;
+    font-size: 28px;
     color: #3E2F9C;
-    margin-top: 16px;
+    margin-top: auto;
     margin-bottom: auto;
 }
 
 .esp-pic{
     width: 200px;
-    height: 200px;
+    height: 190px;
     background-size: cover;
 }
 
 .comming-s-box{
     background-color: rgba(111, 76, 176, 0.25);
-    width: 100%;
-    height: 100%;
+    width: 246px;
+    height: 200px;
     border-radius: 57px;
     padding: 29px 33px 29px 33px;
     display: flex;
@@ -96,8 +131,7 @@
     padding: 27px 16px 27px 16px;
     display: flex;
     flex-direction: column;
-    backdrop-filter: blur(10px) !important;
-    -webkit-backdrop-filter: blur(10px) !important;
+    margin-top: 20px;
 }
 .prof-sec-title{
     font-family: "Alata", serif;
@@ -150,3 +184,30 @@
     margin-left: 10px;
     margin-right: 10px;
 }
+
+@media (width <= 915px) {
+    .content-data-profile{
+        width: 100%;
+    }
+    .dot-states{
+        display: none;
+    }
+    .content-medical-options{
+        display: flex;
+        flex-direction: column;
+    }
+    .choose-speci-box{
+        justify-content: center;
+        width: 100%;
+        margin-bottom: 20px;
+        margin-right: 0px;
+
+    }
+    .comming-s-box{
+        width: 100%;
+    }
+    .comming-text{
+        text-align: center;
+    }
+}
+ 
