--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -35,9 +35,7 @@
   padding: 18px 0 0 25px;
   display: flex;
   justify-content: center;
-  height: 73px;
-
-
+  height: 74px;
 }
 
 .custom-btn {
@@ -64,6 +62,33 @@
   .nav-toggle{
     display: none;
   }
+
+/* navbar profile */
+.navbar-profile {
+  background-color: rgba(205, 199, 237, 0.25);
+}
+.navbar-profile .nav-btn-container-responsive{
+  display: none;
+}
+.navbar-profile .nav-btn-container{
+  padding: 18px 0 0 25px;
+  display: flex;
+  height: 74px;
+  background-color: transparent;
+}
+.navbar-profile .custom-btn:hover {
+  background-color: #6445AC;
+  border: 1px solid #3E2F9C;
+}
+.navbar-profile .special_margin{
+  margin-right: 0;
+}
+.navbar-profile .nav-content-img{
+  margin-left: 0;
+}
+
+/* Responsive Design */
+
 
   @media (width <= 915px) {
     .nav-toggle{
@@ -157,6 +182,21 @@
     }
     .special_margin{
       margin-right: 0px;
+    }
+
+    .navbar-profile .nav-btn-container-responsive{
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 15px;
+    }
+    .navbar-profile .nav-btn-container{
+      display: none;
+    }
+    .navbar-profile .nav_links{
+      background-color: #4d3b99;
     }
 
      
