unified register with doctor register

--- a/src/front/styles/doctorregister.css
+++ b/src/front/styles/doctorregister.css
@@ -1,63 +1,89 @@
-
 .doctor-register-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: calc(100vh - 100px);
+    width: 100vw;
+    margin: 50px auto;
+    position: relative;
+    overflow: auto;
 }
 
-
 .doctor-register-card {
-    padding: 1.5rem;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.2);
     width: 100%;
-    max-width: 600px;
+    max-width: 500px;
     border-radius: 15px;
     background-color: rgba(111, 76, 176, 0.33);
-    margin: 25px;
-    padding: 1px 1px;
     position: relative;
 }
 
-
 .doctor-register-title {
-    color: #4a148c;
-    position: absolute;
-    top: -32px;
-    left: 15px;
-    font-size: 24px;
+    color: #3E2F9C;
+    font-size: 22px;
+    font-weight: bold;
+    text-align: center;
+    position: relative;
+    top: 40px;
+    left: 33%;
+    border-radius: 8px;
 }
-
 
 .doctor-register-label {
     color: #3E2F9C;
     font-size: 16px;
+    margin-bottom: 0.5rem;
+    display: block;
 }
 
 .doctor-register-input {
-    background-color: rgba(111, 76, 176, 0.00);
+    background-color: transparent;
     border: 1px solid #4a148c;
     border-radius: 8px;
     color: white;
-    font-size: 12px;
+    font-size: 15px;
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
+.doctor-register-input::placeholder {
+    color: white;
+    font-size: 15px;
+}
 
-.doctor-register-select option {
+.doctor-register-select {
+    background-color: transparent;
+    border: 1px solid #4a148c;
+    border-radius: 8px;
+    color: #4a148c;
+    font-size: 15px;
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+
+option {
     background-color: rgba(111, 76, 176, 0.33);
+    color: #4a148c;
 }
 
+option:hover {
+    background-color: #4a148c;
+    color: white;
+}
 
 .doctor-register-button {
     background-color: #4a148c;
     border-radius: 8px;
     padding: 10px;
-    margin-top: 10px;
-    font-size: 16px;
-    width: 35%;
+    font-size: 15px;
     color: white;
     border: none;
     cursor: pointer;
+    width: 100%;
+    margin-top: 10px;
 }
 
 .doctor-register-button:hover {
