--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -20,7 +20,7 @@ body {
 .content-data-profile{
     width: 80%;
     background-color: rgba(111, 76, 176, 0.45);
-    height: 350px;
+    height: 100%;
     border-radius: 21px;
     padding: 30px 19px 25px 19px;
     display: flex;
