changed on login and register components

--- a/src/front/styles/login.css
+++ b/src/front/styles/login.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Alate&family=Jost:wght@400;600&family=Gantari:wght@400;500;600&display=swap');
+
 .login-container {
     display: flex;
     justify-content: center;
@@ -19,15 +21,14 @@
     position: relative;
 }
 
-.login-title{
+.login-title {
+    font-family: 'Alate', sans-serif;
     color: #4a148c;
-    font-size: 35px;
-    margin-bottom: 1.5rem;
+    font-size: 34px;
     text-align: center;
     position: absolute;
     top: 200px;
     left: 35%;
-    padding: 5px 15px;
 }
 
 .form-label {
@@ -35,6 +36,7 @@
     font-size: 16px;
     margin-bottom: 0.5rem;
     display: block;
+    font-family: 'Gantari', sans-serif;
 }
 
 .form-control {
@@ -46,40 +48,57 @@
     padding: 10px;
     width: 100%;
     margin-bottom: 1rem;
+    font-family: 'Gantari', sans-serif;
 }
 
-
 .form-control::placeholder {
-    color: white ;
+    color: white;
     font-size: 15px;
+    font-family: 'Gantari', sans-serif;
+}
+
+.form-control:focus {
+    outline: none;
+    background-color: inherit;
+    border-color: #6f4cb0; 
+    box-shadow: none;
 }
 
 .login-button {
-    background-color: #4a148c;
+    background-color: #3E2F9C;
     border-radius: 8px;
     padding: 10px;
-    font-size: 15px;
+    font-size: 20px;
     color: white;
     border: none;
     cursor: pointer;
     width: 33%;
     margin-top: 10px;
+    font-family: 'Jost', sans-serif;
 }
 
 .login-button:hover {
     opacity: 0.9;
+    transform: scale(1.02);
+    background-color: #3E2F9C;
 }
 
 .register-link {
-    color: red;
+    color: #3E2F9C;
     text-decoration: none;
+    font-family: 'Gantari', sans-serif;
+    font-weight: 600;
 }
 
-.register-link:hover {
-    text-decoration: underline;
-}
 
 .forgot-password-link {
-    color:#3E2F9C ;
+    color: #3E2F9C;
+    text-decoration: none;
+    font-family: 'Gantari', sans-serif;
 }
 
+.register-warning{
+    color: #3E2F9C;
+    text-decoration: none;
+    font-family: 'Gantari', sans-serif;
+}
