--- a/src/front/styles/footer.css
+++ b/src/front/styles/footer.css
@@ -1,42 +1,48 @@
 .footer {
-    display: flex;
-    flex-shrink: 0;
-    width: 100%;
-  }
-  
-  .footer-body {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 0;
-    height: 120px;
-    width: 100%;
-    color: white;
-    font-family: "Gantari", sans-serif;
-    font-size: 12px;
-    background: linear-gradient(180deg, #6f4cb0 20%, #4632a5 100%);
-    text-opacity: 75%;
-  }
-  
-  .footer-logo {
-  width: 120px;
-  height: auto; 
-  display: block; 
-  margin: 0;
-  padding: 0;
-  align-self: center;
+  display: flex;
+  flex-shrink: 0;
+  width: 100%;
 }
-  
-  .footer-link {
-    color: white;
-    text-decoration: none;
-    opacity: 0.75;
-  }
-  
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0%;
-  }
+
+.footer-body {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center;
+  padding: 10px 0;
+  height: auto;
+  width: 100%;
+  color: white;
+  font-family: "Gantari", sans-serif;
+  font-size: 16px;
+  background: linear-gradient(180deg, #6f4cb0 20%, #4632a5 100%);
+}
+
+.footer-logo {
+  width: 145px;
+  height: 61px;
+  background-size: cover;
+  margin-top: 13px;
+}
+
+.footer-link {
+  color: white;
+  text-decoration: none;
+  opacity: 0.75;
+}
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  text-align: center;
+  padding: 0%;
+}
+
+.row-footer {
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center;
+  text-align: center;
+  margin: 0 auto; 
+  width: 100%;
+}
