fix(css & profiles): css fixed and profile functionality tasted(we need to taste again)

--- a/src/front/styles/profile.css
+++ b/src/front/styles/profile.css
@@ -181,16 +181,25 @@ body {
     margin-left: 10px;
     margin-right: 10px;
 }
+.no-appoint-msg{
+    color:#3E2F9C;
+    font-family: "Alata", serif;
+    font-size: 15px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
 
 /* Doctor-profile css */
-.doctor-profile .esp-pic {
+/* .doctor-profile .esp-pic {
     height: 207px;
     width: 190px;
     margin-top: 4px;
 }
 .doctor-profile .choose-speci-box {
     padding: 10px 15px 0 15px;
-}
+} */
 /* Responsive */ 
 
 @media (width <= 915px) {
