--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -77,7 +77,7 @@
   width: 300px;
   height: 300px;
   margin: 0 auto;
-  border-radius: 50%;
+  border-radius: 20%;
   overflow: hidden;
   border: 4px solid #3e2f9c;
 }
@@ -86,6 +86,7 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 16px;
 }
 
 .carousel-caption {
