--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -6,19 +6,18 @@
     on that page only (the ones not reused in other pages).
 */
 .home_body {
-  background-color: #f2f0f9;
-  padding: 20px;
+  /*padding: 20px;*/
 }
 /*Sección Principal*/
 
 /* Hero Section */
 
 .hero-section {
+  background-color: #CDC7ED;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 50px;
 }
 
 .hero-text {
@@ -38,6 +37,7 @@
   max-width: 100%;
   padding: 20px;
   text-align: center;
+  background-color: red;
 }
 
 .hero-image img {
@@ -45,6 +45,11 @@
   height: auto;
 }
 
+.degradado-hero-img {
+  background-color: red;
+  height: 400px;
+  width: 200px;
+}
 /* What do we do? */
 .what-we-do {
   text-align: center;
