--- a/src/front/styles/home.css
+++ b/src/front/styles/home.css
@@ -20,6 +20,23 @@
   align-items: center;
 }
 
+.cuadrado{
+  width: 287px;
+  height: 47%;
+  position: absolute;
+  z-index: 0;
+  right: 0;
+  background: linear-gradient(#3E2F9C, #553CA9, #6445AC);
+}
+
+.hero-image img {
+  max-width: 100%;
+  height: auto;
+  z-index: 1;
+  position: relative;
+  left: 150px;
+}
+
 .hero-text {
   flex: 1 1 40%;
   max-width: 100%;
@@ -37,7 +54,6 @@
   max-width: 100%;
   padding: 20px;
   text-align: center;
-  background-color: red;
 }
 
 .hero-image img {
@@ -84,7 +100,7 @@
   margin: 0 auto;
   border-radius: 20%;
   overflow: hidden;
-  border: 4px solid #3e2f9c;
+  border: 4px solid #624af2;
 }
 
 .carousel-item img {
